Update to MC 26.1.2
- Migrate from yarn mappings to Mojang official names (obfuscation removed in 26.x)
- Gradle 9.5.1, Loom 1.17, Fabric Loader 0.19.3, Fabric API 0.154.0+26.1.2, Java 25
- Reach distance now attribute-based (entityInteractionRange)
- Crosshair picking moved from GameRenderer to Minecraft#pick
- KeyMapping categories are now registered objects
- MidnightLib 1.9.3: config class must extend MidnightConfig
- Update CI workflows to JDK 25; release now attaches the jar via GitHub release

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>